--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui vamos hacer mi blog de post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+                    <h1>Este es el titulo interactivo del post</h1>
+                    <p>Y este es el parrafo de inicio donde vamis a explicar las cosas increibles</p>
+            </div>
+
+        </div>
+        
     </body>
 </html>
