Estructura inicial a la cabecera

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,11 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+
+                cabecera
+
+            </div>
             <div id="post">
                     <h1>Este es el titulo interactivo del post</h1>
                     <p>Y este es el parrafo de inicio donde vamis a explicar las cosas increibles</p>
