--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,10 @@
             <div id="post">
                     <h1>Este es el titulo interactivo del post</h1>
                     <p>Y este es el parrafo de inicio donde vamis a explicar las cosas increibles</p>
+                    <p> Los blogs son la mejor forma de compartir informacion y tus ideas.
+                        Muchos mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar
+                        Pero estadisticamente no lo eres..... por ahora.
+                    </p>
             </div>
 
         </div>
