--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
             <div id="cabecera">
 
                 Hyperblog
-                <span id="tagline"> Tu blog de confianza</span>
+                <span id="tagline"> Tu blog de Maestro</span>
 
             </div>
             <div id="post">
@@ -18,6 +18,7 @@
                         Muchos mas que ir a conferencias o salir en youtube. Excepto si eres un rockstar
                         Pero estadisticamente no lo eres..... por ahora.
                     </p>
+                    <p>Suscribete y dale like</p>
             </div>
 
         </div>
